2010-11-10  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/yarpserver/src/TripleSourceCreator.cpp: add an index
	that testing shows boosts performance.

2010-11-10  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* src/doc/cmd_yarp.dox: document timeout option.

	* src/libYARP_OS/src/Companion.cpp: add timeout option to
	"yarp clean" [thanks Stephane Lallee]

2010-11-09  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/yarp.i: support PortReader::read callback
	in SWIG-wrapped code [thanks Emanuel Sousa]

2010-11-08  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* src/doc/persistent_connections.dox: add notes about using 
	persistent connections from code [thanks Charles Lesire-Cabaniols]

2010-10-30  Ugo Pattacini  <ugo.pattacini@iit.it>

	* src/libYARP_dev/include/yarp/dev/CartesianControl.h: added 4 new methods

2010-10-29  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* example/swig/yarp.i: update C# binding for Value::isNull. SWIG
	was guessing wrong virtual/override tag [thanks Stephane Lallee]

2010-10-26  Marco Randazzo <marco.randazzo@iit.it>

	* src\modules\laserHokuyo\*.*
	Added deviceDriver for Hokuyo UTM30LX laser range finder.

2010-10-21  Marco Randazzo <marco.randazzo@iit.it>

	* src\modules\serial\SerialDeviceDriver.cpp
	* src\modules\serial\SerialDeviceDriver.h
	* src\libYARP_dev\include\yarp\dev\SerialInterfaces.h
	* src\libYARP_dev\include\yarp\dev\ServerSerial.h
	Added two new methods to the serial device driver:
	-	receiveChar() to receive a single character from the serial port.
	- 	receiveLine() to receive a '\n' terminated string from the serial port.

2010-10-19  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_dev/src/ServerControlBoard.cpp: add missing 
	"get encs" description to help on rpc port.

2010-10-18  Marco Randazzo <marco.randazzo@iit.it>

	* src\modules\serial\SerialDeviceDriver.cpp
	fixed a critical bug on serial port parity property 