@@ -1,3 +1,10 @@
+2010-11-12  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>
+
+	* src/libYARP_OS/src/NameClient.cpp: start migrating away
+	from old "nameser" carrier to using carrier-neutral
+	communication.  This was legacy code used in bootstrapping
+	YARP years ago [thanks Daniel Krieg]
+
 2010-11-10  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* src/yarpserver/src/TripleSourceCreator.cpp: add an index
